# mle3

./: LICENSE  Makefile  README.md  pyproject.toml
feast_Service/feature_store_general/feature_repo/: example_repo.py  feature_store.yaml
feast_Service/feature_store_general/feature_repo/data/: driver_stats.parquet  registry.db  untitled.txt
mle2/: procesamientos.py
models/mlruns/0/: meta.yaml
models/mlruns/0/2dd4a70902af4cc8bda6aeeb3bb89e4c/: meta.yaml
models/mlruns/0/2dd4a70902af4cc8bda6aeeb3bb89e4c/tags/: mlflow.source.name
models/mlruns/0/5605987ba26849a3911f4543426383f7/: meta.yaml
notebooks/: Clasificacion HPM.ipynb  Ensamble.ipynb  Ensambles.ipynb  Serie de Tiempo.ipynb  Untitled.ipynb  ensambles_clasificacion.py  metricas.ipynb  procesamientos.py
